tests/golden/type_errors/function_param_type_mismatch.cd
fun bad(x: number) {
  print x + "s";
}
